--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha03"
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.0"
 
     //hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
